# avito-bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  env.docker.example  pyproject.toml
app/: __init__.py  admin_logging.py  ai_client.py  ai_factory.py  assistant.py  autoreply_logic.py  autoreply_worker.py  avito_client.py  avito_payload.py  avito_sync.py  bot_rules.py  codex_app_server_client.py  config.py  deepseek_client.py  http_errors.py  main.py  manager_notification_service.py  manager_notifications.py  process_unread.py  reply_strategy.py  runtime_logging.py  runtime_services.py  runtime_state.py  schemas.py  server.py  storage.py  storage_queries.py
app/rules/: bot-rules.json
app/static/: api.js  app.js  bot-rules.js  index.html  qualification.js  styles.css
docs/: admin-ui-drafts.html  business-flow.md
docs/avito-autoload/: 2026-07-15-regional-rollout.md  current-listings.md
templates/: instruction-kit.template.json
tests/: test_admin_logging.py  test_ai_client.py  test_assistant.py  test_avito_client.py  test_avito_payload.py  test_config.py  test_docker_runtime.py  test_main.py  test_reply_strategy.py  test_runtime_logging.py  test_storage.py
tools/: AGENT_RUNBOOK.md  AGENT_WORKING_AGREEMENTS.md  deploy-local-release.ps1  migrate_runtime_storage.py
tools/avito-autoload/: Invoke-AvitoAutoload.ps1  New-AvitoRegionalFeed.ps1  README.md
tools/project-memory/: instruction-kit.json  pending-tasks.md
tools/summary/: 2026-06-23-avito-module-2-bootstrap.md  (+2 more)
(+12 files in other folders)
